--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+
     <script>
 
         let grade = 0;
@@ -26,14 +27,15 @@
             console.log("you have A grade");
         }
         if (grade >= 80 && grade < 100) {
-            console.log("you have A1 grade");
+            console.log("Ecelent you have A1 grade");
         }
         if (grade >= 101 && grade < 1000) {
             console.log("invalid 100 above");
         }
-        else (grade === 0 && grade < 0) {
-            console.log("invalid below zero");
-        }
+        else (grade === 0 && grade < 0)           
+         console.log("invalid below zero");
+       
+
 
 
 
